--- a/styles.css
+++ b/styles.css
@@ -873,6 +873,9 @@ footer .categories-list{
 }
 
 .categories-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: relative;
     margin-bottom: 15px;
     padding-left: 20px;
@@ -880,16 +883,6 @@ footer .categories-list{
     white-space: nowrap;
 }
 
-.categories-item::before {
-    content: "";
-    display: block;
-    width: 14px;
-    height: 2px;
-    background-color: var(--accent-color);
-    position: absolute;
-    top: 50%;
-    left: 0;
-}
 
 footer .phone-numbers{
     display: -webkit-box;
